Fix mistake allowing homepage headshot to be too large.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -166,6 +166,14 @@ hr {
 }
 
 /**
+ * Images
+ */
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+/**
  * Icons
  */
 .icon {
