--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,3 +73,8 @@
 .content-link {
 	font-size: 24px;
 }
+
+img.headshot {
+	margin: auto $spacing-unit/2;
+	border-radius: 50%;
+}
